<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:background="@color/backgroundcolor"
    android:layout_height="fill_parent">
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_centerInParent="true"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="检测时间"
            >
        </TextView>

        <EditText
            android:id="@+id/showdatetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="5dp"
            android:layout_weight="1"
            android:editable="false"
            android:background="@drawable/textedit_style"/>
        <ImageButton
            android:id="@+id/dateselectorbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_go_to_today"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="检测人员"
            >
        </TextView>
        <Spinner android:id="@+id/spinnerperson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="车辆型号"
            android:visibility="gone"
            >
        </TextView>
        <Spinner android:id="@+id/spinnerpara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="零件名称"
            android:visibility="gone"
            >
        </TextView>
            <Spinner android:id="@+id/spinnername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone"/>
        <ImageButton
            android:id="@+id/filterbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_send_now"
            android:background="@android:color/transparent"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/text"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
    <com.example.firegnu.torquewrenchdemo.ListViewTable
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TableLayout android:layout_height="wrap_content"
            android:layout_width="match_parent" android:id="@+id/headerTable">
            <TableRow style="@style/tableHeaderRow">
                <TextView style="@style/tableHeaderText" android:text="@string/header_text1"  />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text2"  />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text3"  />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text4" />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text5" />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text6" />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text7" />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text8" />
                <TextView style="@style/tableHeaderText" android:text="@string/header_text9" />
            </TableRow>
            <TableRow style="@style/tableBodyRow">
                <TextView android:text="@string/dummy" style="@style/tableBodyText" android:height="0dp" />
                <TextView android:text="@string/dummy" style="@style/tableBodyText"
                    android:height="0dp" />
                <TextView android:text="@string/dummy" style="@style/tableBodyText" android:height="0dp" />
                <TextView android:text="@string/dummy" style="@style/tableBodyText" android:height="0dp" />
            </TableRow>
        </TableLayout>
        <!-- Table Body -->
        <ScrollView android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableLayout android:layout_height="wrap_content"
                android:layout_width="match_parent" android:id="@+id/bodyTable">

            </TableLayout>
        </ScrollView>
    </com.example.firegnu.torquewrenchdemo.ListViewTable>
    </LinearLayout>
</RelativeLayout>