<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_centerInParent="true"/>
    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_login_userselector_label"
                android:layout_gravity="center"
                android:textSize="24dp"/>
            <LinearLayout android:id="@+id/loginuserselectorlayout" android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp">
            <ImageButton
                android:id="@+id/preuserbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/prepage"
                android:layout_gravity="center"
                android:layout_weight="4"
                />
            <ImageView
                android:id="@+id/userlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/userlogo"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                />
                <ImageButton
                    android:id="@+id/nextuserbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/nextpage"
                    android:layout_gravity="center"
                    android:layout_weight="4"
                    />
            </LinearLayout>
            <TextView android:id="@+id/username" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="杨帆"
                android:layout_gravity="center"/>
            <EditText android:id="@+id/password" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified" android:inputType="textPassword"
                android:maxLines="1" android:singleLine="true"
                android:padding="10dp"
                android:layout_marginTop="15dp"
                android:drawableLeft="@drawable/password"
                />

            <Button android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                android:textColor="#000"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
